Opis šta si menjao, npr. Dodata profilna slika na ProfilePage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Proba</string>
+    <string name="google_maps_key">@string/google_maps_key</string>
+
 </resources>
